--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -5,7 +5,8 @@
     position: fixed;
     bottom: 0;
     height: 50px;
-
+    z-index: 99;
+    background: white;
     max-height: 50px;
     display: flex;
     align-items: center;
@@ -15,6 +16,7 @@
 nav {
     width: 100%;
     padding: 10px;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -23,6 +25,7 @@ nav {
 
 .iContainers {
     display: flex;
+    cursor: pointer;
     flex-direction: column;
     align-items: center;
     height: 100%;
@@ -42,7 +45,8 @@ nav {
     margin-top: .5rem;
     color: #818080;
 }
+
 .iContainers.active,
-.iContainers.active small{
+.iContainers.active small {
     color: #3581CF;
 }
