--- a/src/Components/slider/slider.css
+++ b/src/Components/slider/slider.css
@@ -2,10 +2,10 @@
 .carousal-container {
     padding: 20px;
     cursor: pointer;
-
 }
 
 .trendingCards {
+    background: white;
     width: 180px;
     max-width: 180px;
     height: max-content;
