Added Cards for Action Page & implemented icon packs

--- a/src/pages/action/takeAction.css
+++ b/src/pages/action/takeAction.css
@@ -1,133 +1,10 @@
 .takeActionPage {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
     background: #f1f1f1;
-    height: fit-content;
+    height: max-content;
+    min-height: 100vh;
     padding-bottom: 50px;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.actionCardsContainer {
-    height: fit-content;
-    padding: 10px 20px 50px 20px;
-}
-
-.actionCardsContainer p {
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 140%;
-    color: #818080;
-}
-
-.cardsWrapper {
-    width: 100%;
-    height: fit-content;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
-}
-
-.cards {
-    background: white;
-    padding: 20px;
-    border-radius: 20px;
-    height: max-content;
-    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
-}
-
-.cardsTitle {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid rgba(129, 128, 128, 0.2);
-}
-
-.cardsTitle h5 {
-    font-size: 1rem;
-}
-
-.cardActivities {
-    margin-top: 1rem;
-    border-bottom: 1px solid rgba(129, 128, 128, 0.2);
-    padding-bottom: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: column;
-    transition: all 0.3s ease-in-out;
-}
-
-.cardActivities:last-child {
-    border-bottom: 0;
-    padding-bottom: .25rem;
-}
-
-.activity {
-    cursor: pointer;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.activity div {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-}
-
-.activity label {
-    cursor: pointer;
-    font-size: .9rem;
-    font-weight: 600;
-    user-select: none;
-    color: #3581CF;
-}
-
-.cardActivities:nth-child(4) label,
-.cardActivities:nth-child(5) label {
-    color: #818080;
-}
-
-.activity input {
-    cursor: pointer;
-}
-
-.activity p {
-    color: #0DA64A;
-    font-size: 12px;
-    font-weight: 600;
-}
-
-.cardActivities:nth-child(4) p,
-.cardActivities:nth-child(5) p {
-    color: #3581CF;
-}
-
-.notOpened {
-    transition: all 0.3s ease;
-    transform: rotate(0);
-}
-
-.rotateArrow {
-    transition: all 0.3s ease-in-out;
-    transform: rotate(-180deg);
-}
-
-.cardOpened {
-    display: flex;
-    height: max-content;
-    flex-direction: column;
-    transition: height 0.3s ease-in-out;
-}
-
-.cardHidden {
-    display: none;
-    height: 0;
-    transition: height 0.3s ease-in-out;
 }
