--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -12,7 +12,11 @@
     align-items: center;
     justify-content: space-evenly;
 }
-
+.navContainer .home{
+    margin: 0;
+    padding: 0;
+    background: transparent;
+}
 nav {
     width: 100%;
     padding: 10px;
