--- a/src/pages/action/actionCard.css
+++ b/src/pages/action/actionCard.css
@@ -1,12 +1,14 @@
 .acContainer {
     height: max-content;
-    min-height: 100vh;
-    padding: 10px 20px;
+    min-height: 100%;
+    padding: 5px 10px;
 }
 
-.acContainer p {
+.acContainer p:first-child {
+    display: block;
+    padding: 0 10px;
     font-weight: 600;
-    font-size: .9rem;
+    font-size: 1rem;
     line-height: 140%;
     color: #818080;
     margin-bottom: 1rem;
@@ -20,19 +22,21 @@
 }
 
 .cards {
-    border: calc(1px / 2) solid #827f7f;
+    width: 280px;
+    border: calc(1px / 2) solid rgba(130, 127, 127, 0.28);
     background: white;
     border-radius: 10px;
     padding: 20px 15px 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.07);
     transition: all 0.3s ease;
 }
 
 .cards.accordion-open {
-    box-shadow:0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
 }
 
 .cards.accordion-open .tasksContainer {
+    opacity: 1;
     height: max-content;
 }
 
@@ -62,6 +66,7 @@
     height: 0;
     margin-top: .5rem;
     overflow: hidden;
+    opacity: 0;
     transition: all 0.3s ease;
 }
 
@@ -75,17 +80,54 @@
 }
 
 .tasks p {
-    margin: 0;
-    color: #3581CF;
+    font-size: 12px;
+    display: inline-block;
+    width: 73px;
+    text-align: right;
+    font-weight: 600;
+    color: #818080;
 }
 
 .tasks div {
     display: flex;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: .5rem;
+}
+
+.tasks div h5 {
+    display: flex;
+    width: max-content;
+    align-items: flex-start;
+}
+
+.tasks span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
 }
 
 .tasks div i {
     font-size: 1.3rem;
     color: #3581CF;
+}
+
+.tasks div {
+    display: flex;
+    width: fit-content;
+}
+
+.tasks.done h5 {
+    color: #3581CF;
+}
+
+.tasks.done p {
+    color: #0DA64A;
+}
+
+.tasks.pending p {
+    color: #3581CF;
+}
+
+.tasks.pending h5 {
+    color: #746f6f;
 }
