--- a/src/pages/action/takeAction.css
+++ b/src/pages/action/takeAction.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    justify-content: space-between;
     background: #f1f1f1;
+    row-gap: .2rem;
     height: max-content;
-    min-height: 100vh;
+    min-height: 90vh;
     padding-bottom: 50px;
 }
